--- a/gwt-mvp-gin-layout/src/main/resources/archetype-resources/src/main/webapp/App.css
+++ b/gwt-mvp-gin-layout/src/main/resources/archetype-resources/src/main/webapp/App.css
@@ -1,9 +1,6 @@
-.body {
-	border-top: solid #FCFCFC;
-	border-bottom: solid #747675;
-	border-width: 2px 0 1px 0;
-	background: url(/images/bodybg.jpg) repeat top;
-	text-align: center;
-	vertical-align: middle;
-	width: 100%;
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
 }
